--- a/Starter_Code.ipynb
+++ b/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,17 +170,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>APPLICATION_TYPE</th>\n",
+       "      <th>AFFILIATION</th>\n",
+       "      <th>CLASSIFICATION</th>\n",
+       "      <th>USE_CASE</th>\n",
+       "      <th>ORGANIZATION</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>INCOME_AMT</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS</th>\n",
+       "      <th>ASK_AMT</th>\n",
+       "      <th>IS_SUCCESSFUL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>T10</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Co-operative</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-9999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>108590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T5</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C3000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10000-24999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>Heathcare</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100000-499999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>142590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  APPLICATION_TYPE       AFFILIATION CLASSIFICATION      USE_CASE  \\\n",
+       "0              T10       Independent          C1000    ProductDev   \n",
+       "1               T3       Independent          C2000  Preservation   \n",
+       "2               T5  CompanySponsored          C3000    ProductDev   \n",
+       "3               T3  CompanySponsored          C2000  Preservation   \n",
+       "4               T3       Independent          C1000     Heathcare   \n",
+       "\n",
+       "   ORGANIZATION  STATUS     INCOME_AMT SPECIAL_CONSIDERATIONS  ASK_AMT  \\\n",
+       "0   Association       1              0                      N     5000   \n",
+       "1  Co-operative       1         1-9999                      N   108590   \n",
+       "2   Association       1              0                      N     5000   \n",
+       "3         Trust       1    10000-24999                      N     6692   \n",
+       "4         Trust       1  100000-499999                      N   142590   \n",
+       "\n",
+       "   IS_SUCCESSFUL  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              0  \n",
+       "3              1  \n",
+       "4              1  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Drop the non-beneficial ID columns, 'EIN' and 'NAME'.\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "application_df.drop(columns=[\"EIN\", \"NAME\"], inplace=True)\n",
+    "application_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -199,19 +332,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine the number of unique values in each column.\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "application_df.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -229,27 +363,29 @@
        "T13       66\n",
        "T12       27\n",
        "T2        16\n",
-       "T14        3\n",
        "T25        3\n",
-       "T15        2\n",
+       "T14        3\n",
        "T29        2\n",
+       "T15        2\n",
        "T17        1\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts to identify and replace with \"Other\"\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "application_type_counts = application_df[\"APPLICATION_TYPE\"].value_counts()\n",
+    "application_type_counts "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +403,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,6 +412,7 @@
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
     "#  YOUR CODE GOES HERE\n",
+    "application_types_to_replace = application_type_counts[application_type_counts < 500].index\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -287,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -299,27 +436,28 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1370        1\n",
        "C4120        1\n",
-       "C2600        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
+       "C8210        1\n",
+       "C2561        1\n",
+       "C4500        1\n",
+       "C2150        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at CLASSIFICATION value counts to identify and replace with \"Other\"\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "application_df[\"CLASSIFICATION\"].value_counts() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -352,40 +490,42 @@
        "C6000       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
-       "C1237        9\n",
+       "C1278       10\n",
        "C1235        9\n",
+       "C1237        9\n",
        "C7210        7\n",
-       "C1720        6\n",
        "C2400        6\n",
+       "C1720        6\n",
        "C4100        6\n",
        "C1257        5\n",
        "C1600        5\n",
-       "C0           3\n",
        "C1260        3\n",
        "C2710        3\n",
+       "C0           3\n",
+       "C3200        2\n",
        "C1234        2\n",
        "C1246        2\n",
        "C1267        2\n",
-       "C3200        2\n",
        "C1256        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "classification_value_counts = application_df[\"CLASSIFICATION\"].value_counts()\n",
+    "classification_value_counts[classification_value_counts > 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +540,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,6 +549,7 @@
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
     "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = classification_value_counts[classification_value_counts < 1000].index\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -797,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.-1.-1"
+   "version": "3.7.9"
   },
   "vscode": {
    "interpreter": {
